--- a/Weather Station V1/platformio.ini
+++ b/Weather Station V1/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:d1_mini_pro]
 platform = espressif8266
-board = d1_mini_pro
+board = esp12e
 framework = arduino
 monitor_speed = 115200
 board_build.filesystem = littlefs
